--- a/index.html
+++ b/index.html
@@ -1,27 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr Shailesh Dubey</title>
+    <title>Dr Shailesh Kumar Dubey</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="js/index.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <nav class="navbar">
         <div class="logo">
             <img src="images/photo.jpg" alt="img">
+            <div class="logo-text">Dr Shailesh Kumar Dubey</div>
         </div>
         <ul class="nav-list">
-            <li class="list-items"><a href="#">Home</a></li>
+            <li class="list-items"><a href="/">Home</a></li>
             <li class="list-items"><a href="#about-container">About Me</a></li>
             <li class="list-items"><a href="#blog-container">Blog</a></li>
             <li class="list-items"><a href="#testimonial-container">Testimonials</a></li>
-            <li class="list-items"><a href="#contact-container">Contact Me</a></li>  
+            <li class="list-items"><a href="#contact-container">Contact Me</a></li>
         </ul>
     </nav>
 
+    <section id="home-container">
+        <div class="home-bg">
+            <img src="" alt="" class="slides">
+        </div>
+        <div class="home-content">
+            <div class="main-text">
+            </div>
+            <div class="sub-text">
+
+            </div>
+        </div>
+    </section>
     <section id="about-container">
     </section>
     <section id="blog-container">
@@ -32,4 +47,5 @@
     </section>
 
 </body>
+
 </html>
